--- a/www/style/_register-event.scss
+++ b/www/style/_register-event.scss
@@ -3,11 +3,34 @@
 }
 
 .input {
-    margin-right: 15px;
-    width: 100%;
-    display: inline-block;
+
+    input {
+        border: 1px solid black;
+        border-radius:4px;
+        background-color : #fff; 
+        width: 100%;
+        font-size: 12px;
+    }
+
+    ::-webkit-input-placeholder {
+        color: black;
+    }
+
+    :-moz-placeholder { /* Firefox 18- */
+        color: black;  
+    }
+
+    ::-moz-placeholder {  /* Firefox 19+ */
+        color: black;  
+    }
+
+    :-ms-input-placeholder {  
+        color: black;  
+    }
+
 }
 
+
 .add-button {
-    margin-top: 15px;
+    margin-top: 0px;
 }
