--- a/www/scripts/components/admin-route/admin-route.template.html
+++ b/www/scripts/components/admin-route/admin-route.template.html
@@ -5,7 +5,9 @@
         <div class="container-fluid news header">
             <div class="row">
                 <div class="col-xs-1"></div>
-                <div class="col-xs-10"><h1>Pirate Planner</h1></div>
+                <div class="col-xs-10">
+                    <a v-link="{ path: '/' }">Home</a>
+                    <h1>Pirate Planner</h1></div>
                 <div class="col-xs-1"></div>      
             </div>
         </div>
