--- a/www/scripts/components/main-route/main-route.template.html
+++ b/www/scripts/components/main-route/main-route.template.html
@@ -9,9 +9,9 @@
 
                     <a v-link="{ path: '/admin' }">Admin</a>
 
-                    <ul v-for="event in events">
-                        <li>Það er opið í {{event['place']}}, {{event['person']}} mannar milli {{event['starttime']}} og {{event['endtime']}}</li>
-                    </ul>
+                    <div v-for="place in places">
+                        <location-display :open="openOnDate(events, date, place)" :place="place" :items="events.filter(placeFilter.bind(null, place))"></location-display>
+                    </div>
 
                 </div>
                 <div class="col-xs-1"></div>      
